# mcplcwatch

./: .cursorignore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PYPI_PUBLISH.md  README.md  main.py  pyproject.toml  run_tests.py  setup.py  temp_pypirc.txt
examples/: README.md  basic_read_write.py  frame_type_example.py  monitor_example.py  multi_plc_monitor.py
mcplcwatch/: __init__.py  client.py  error.py  monitor.py  protocol.py
mcplcwatch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: README.md  __init__.py  test_client_mock.py  test_integration.py  test_monitor_mock.py  test_protocol.py
